Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74836

Qt does not use screen scaling set in Gnome

    XMLWordPrintable

Details

    • Linux/X11
    • 121692e5408561f486cad5cd170ac8bcd2557eb2 (qt/qtbase/5.12)

    Description

      Running on one single HiDPI screen, I have my Gnome scaled to 200% but Qt does not pick it up correctly and GUIs look bizarre:

      qtdiag writes:

      Screens: 1, High DPI scaling: inactive
      # 0 "DP1" Depth: 24 Primary: yes
        Manufacturer: Acer Technologies
        Model: B326HK-
        Serial number: T1NEE0018532-
        Geometry: 3840x2160+0+0 Available: 3732x2100+108+60
        Physical size: 710x400 mm  Refresh: 59 Hz Power state: 0
        Physical DPI: 137.375,137.16 Logical DPI: 192,192 Subpixel_None
        DevicePixelRatio: 1 Pixel density: 1
        Primary orientation: 2 Orientation: 2 Native orientation: 0 OrientationUpdateMask: 0
      

      If I explicitly set a scaling factor using QT_SCREEN_SCALE_FACTORS=2 GUIs start to look acceptable and qtdiag instead writes:

      Screens: 1, High DPI scaling: active
      # 0 "DP1" Depth: 24 Primary: yes
        Manufacturer: Acer Technologies
        Model: B326HK-
        Serial number: T1NEE0018532-
        Geometry: 1920x1080+0+0 (native: 3840x2160+0+0) Available: 1866x1050+54+30
        Physical size: 710x400 mm  Refresh: 59 Hz Power state: 0
        Physical DPI: 68.6873,68.58 Logical DPI: 96,96 (native: 192,192) Subpixel_None
        High DPI scaling factor: 2 DevicePixelRatio: 2 Pixel density: 1
        Primary orientation: 2 Orientation: 2 Native orientation: 0 OrientationUpdateMask: 0
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              allan.jensen Allan Sandfeld Jensen
              rlohning Robert Löhning
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes