src/plugins/platforms/xcb/qxcbscreen.cpp
@@ -658,16 +658,24 @@ QImage::Format QXcbScreen::format() const
     return format;
 }
 
-QDpi QXcbScreen::logicalDpi() const
+int QXcbScreen::forcedDpi() const
 {
     static const int overrideDpi = qEnvironmentVariableIntValue("QT_FONT_DPI");
     if (overrideDpi)
-        return QDpi(overrideDpi, overrideDpi);
+        return overrideDpi;
 
     const int forcedDpi = m_virtualDesktop->forcedDpi();
-    if (forcedDpi > 0) {
+    if (forcedDpi > 0)
+        return forcedDpi;
+    return 0;
+}
+
+QDpi QXcbScreen::logicalDpi() const
+{
+    const int forcedDpi = this->forcedDpi();
+    if (forcedDpi > 0)
         return QDpi(forcedDpi, forcedDpi);
-    }
+
     return m_virtualDesktop->dpi();
 }
 
@@ -739,7 +747,9 @@ void QXcbScreen::updateGeometry(const QRect &geometry, uint8_t rotation)
     if (m_sizeMillimeters.isEmpty())
         m_sizeMillimeters = sizeInMillimeters(geometry.size(), m_virtualDesktop->dpi());
 
-    qreal dpi = geometry.width() / physicalSize().width() * qreal(25.4);
+    qreal dpi = forcedDpi();
+    if (dpi <= 0)
+        dpi = geometry.width() / physicalSize().width() * qreal(25.4);
 
     // Use 128 as a reference DPI on small screens. This favors "small UI" over "large UI".
     qreal referenceDpi = physicalSize().width() <= 320 ? 128 : 96;
